# ESP32ModbusBridge

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  flash.bat  flash.sh  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml  release.yml
docs/: BUILD_AND_DEPLOY.md  COMPLETION_SUMMARY.md  FINAL_STATUS.md  FINAL_VERIFICATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INTEGRATION_COMPLETE.md  PROJECT_COMPLETE.md  README.md  REVIEW_COMPLETE.md  STUB_FILES_DOCUMENTATION.md  STUB_FILES_REMOVED.md  drivers_README.md  network_README.md  shell_README.md
main/: CMakeLists.txt  main.c
src/config/: param_ids.h  param_manager.c  param_manager.h
src/drivers/: rs485_driver.c  rs485_driver.h  uart_driver.c  uart_driver.h
src/network/: tcp_client.c  tcp_client.h  tcp_server.c  tcp_server.h  tls_client.c  tls_client.h  tls_server.c  tls_server.h
src/ota/: ota_manager.c  ota_manager.h
src/protocol/: crc_utils.c  crc_utils.h  data_process.c  data_process.h  function_codes.h  modbus_protocol.c  modbus_protocol.h
src/shell/: command_handlers.c  command_handlers.h  command_parser.c  command_parser.h  terminal_service.c  terminal_service.h
src/system/: boot_init.c  boot_init.h  sdk_init.c  sdk_init.h
src/tasks/: ble_task.c  ble_task.h  button_task.c  button_task.h  led_task.c  led_task.h  rs485_task.c  rs485_task.h  tcp_client_task.c  tcp_client_task.h  tcp_server_task.c  tcp_server_task.h  uart_rx_task.c  uart_rx_task.h  wifi_task.c  wifi_task.h
src/utils/: factory_test.c  factory_test.h  heartbeat.c  heartbeat.h  poll_timer.c  (+7 more)
