idf_component_register(
    SRCS 
        "main.c"
        "../src/tasks/rs485_task.c"
        "../src/tasks/tcp_client_task.c"
        "../src/tasks/tcp_server_task.c"
        "../src/tasks/uart_rx_task.c"
        "../src/tasks/wifi_task.c"
        "../src/tasks/ble_task.c"
        "../src/tasks/led_task.c"
        "../src/tasks/button_task.c"
        "../src/protocol/data_process.c"
        "../src/protocol/modbus_protocol.c"
        "../src/protocol/crc_utils.c"
        "../src/config/param_manager.c"
        "../src/shell/terminal_service.c"
        "../src/utils/heartbeat.c"
        "../src/utils/poll_timer.c"
        "../src/utils/factory_test.c"
        "../src/utils/system_utils.c"
        "../src/utils/ringbuffer.c"
        "../src/utils/watchdog.c"
        "../src/ota/ota_manager.c"
        "../src/system/sdk_init.c"
        "../src/system/boot_init.c"
    INCLUDE_DIRS 
        "."
        "../src"
        "../src/tasks"
        "../src/drivers"
        "../src/network"
        "../src/protocol"
        "../src/config"
        "../src/shell"
        "../src/utils"
        "../src/ota"
        "../src/system"
    PRIV_REQUIRES 
        nvs_flash
        esp_wifi
        esp_netif
        esp_event
        esp_https_ota
        app_update
        mbedtls
        bt
        driver
        freertos
        lwip
)

